# fastapi-sqlalchemy-crud

./: .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml
src/fastapi_sqlalchemy_crud/: __main__.py  base.py  database.py  models.py  serializers.py  server.py
tests/: conftest.py  test_server.py
